--- a/less/content.less
+++ b/less/content.less
@@ -589,3 +589,6 @@
 	text-align: center;
 }
 
+.crm-container.crm-public .select2-container .select2-choice {
+	height: auto !important;
+}
